Kubernetes-Projects/Kubernetes-Microservice-Phonebook/Application-Files/source-files/db-db_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql-deploy
  name: mysql-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-deploy
  template:
    metadata:
      labels:
        app: mysql-deploy
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        resources: {}
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: mysql-persistent-volume
      volumes:
        - name: mysql-persistent-volume
          persistentVolumeClaim:
            claimName: mysql-pv-claim
        
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql-deploy
  name: mysql-service
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql-deploy
